Projenin security bolumu aktif edildi