@@ -22,6 +22,8 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -32,6 +34,10 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
     @Override
     protected void configure(HttpSecurity http) throws Exception {
+
+        // security devre disi
+        //http.csrf().disable().cors().and().authorizeRequests().anyRequest().permitAll();
+
         http.csrf().disable().cors().and().authorizeHttpRequests()
                 .antMatchers(HttpMethod.POST, "/login").permitAll()
                 .anyRequest().authenticated().and()
@@ -42,27 +48,39 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                 .addFilterBefore(new AuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
     }
 
-    @Autowired
-    public void configureGlobal(AuthenticationManagerBuilder auth)
-            throws Exception {
-        auth.userDetailsService(userDetailsService)
-                .passwordEncoder(new BCryptPasswordEncoder());
-    }
-
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(Arrays.asList("*"));
+        //1.Yöntem
+        //config.setAllowedOrigins(Arrays.asList("*"));
+        //config.setAllowedMethods(Arrays.asList("*"));
+        //config.setAllowedHeaders(Arrays.asList("*"));
+
+        //3.Yöntem:
+        //config.setAllowedMethods(Arrays.asList("*"));
+        //config.setAllowedHeaders(Arrays.asList("*"));
+        //config.setAllowedOrigins(Collections.singletonList("*"));
+
+        //2.Yöntem:
+        config.setAllowedOrigins(List.of("http://localhost:3000"));
         config.setAllowedMethods(Arrays.asList("*"));
         config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
+
         config.applyPermitDefaultValues();
         source.registerCorsConfiguration("/**", config);
 
         return source;
 
+    }
+
+    @Autowired
+    public void configureGlobal(AuthenticationManagerBuilder auth)
+            throws Exception {
+        auth.userDetailsService(userDetailsService)
+                .passwordEncoder(new BCryptPasswordEncoder());
     }
 
 /*
